--- a/cluster/charts/rook-ceph/templates/deployment.yaml
+++ b/cluster/charts/rook-ceph/templates/deployment.yaml
@@ -28,7 +28,7 @@ spec:
         args: ["ceph", "operator"]
         env:
         - name: ROOK_CURRENT_NAMESPACE_ONLY
-          value: "true"
+          value: "false"
 {{- if not .Values.rbacEnable }}
         - name: RBAC_ENABLED
           value: "false"
